--- a/style/index.css
+++ b/style/index.css
@@ -1,21 +1,12 @@
 @font-face {
-font-family: 'ruiboti';
-src: url('ruibo.eot');
-src: url('ruibo.eot?#iefix') format('embedded-opentype'),
-     url('ruibo.woff') format('woff'),
-     url('ruibo.ttf') format('truetype'),
-     url('ruibo.svg#ruibo') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'siyuanhei';
-    src: url('//at.alicdn.com/t/69pfrgjwan12a9k9.eot'); /* IE9*/
-    src: url('//at.alicdn.com/t/69pfrgjwan12a9k9.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-    url('//at.alicdn.com/t/69pfrgjwan12a9k9.woff') format('woff'), /* chrome、firefox */
-    url('//at.alicdn.com/t/69pfrgjwan12a9k9.ttf') format('truetype'), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
-    url('//at.alicdn.com/t/69pfrgjwan12a9k9.svg#思源黑体-极细') format('svg'); /* iOS 4.1- */
+     font-family: 'ruiboti';
+     src: url('ruibo.eot');
+     src: url('ruibo.eot?#iefix') format('embedded-opentype'),
+          url('ruibo.woff') format('woff'),
+          url('ruibo.ttf') format('truetype'),
+          url('ruibo.svg#ruibo') format('svg');
+         font-weight: normal;
+         font-style: normal;
 }
 
 *{
@@ -58,8 +49,8 @@ footer{
 .column ul{
 }
 .column li{
-    font-family: 'siyuanhei';
     line-height: 2;
+    white-space: nowrap;
 }
 .column li a{
     color: #333;
