--- a/style/index.css
+++ b/style/index.css
@@ -42,7 +42,7 @@ footer{
 .column h3{
     font-family: 'ruiboti';
     font-size: 24px;
-    padding: 10px 0;
+    line-height: 50px;
     border-bottom: 1px solid #3aa588;
     margin-bottom: 10px;
 }
