--- a/style/index.css
+++ b/style/index.css
@@ -43,7 +43,7 @@ footer{
     font-family: 'ruiboti';
     font-size: 24px;
     line-height: 50px;
-    border-bottom: 1px solid #3aa588;
+    border-bottom: 1px solid #000080;
     margin-bottom: 10px;
 }
 .column ul{
