--- a/style/index.css
+++ b/style/index.css
@@ -32,12 +32,17 @@ footer{
     content: '';
     clear: both;
 }
-.main{}
+.main{
+    padding: 10px;
+}
 .column{
-    width: 25%;
+    width: 23%;
     float: left;
-    padding: 20px;
+    padding: 10px;
     box-sizing: border-box;
+    border: 1px solid #000080;
+    border-radius: 5px;
+    margin: 1%;
 }
 .column h3{
     font-family: 'ruiboti';
@@ -66,4 +71,5 @@ footer{
 }
 .column li span{
     color: #ddd;
+    padding-left: 5px;
 }
