--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -7,6 +7,20 @@
 </head>
 <body>
 	{{ content }}
-	<footer>仰望星空何尝不是一种生活态度！</footer>
+	<footer>
+		<div>仰望星空何尝不是一种生活态度！</div>
+		<div>
+			<script>
+			  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+			  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+			  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+			  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+			  ga('create', 'UA-102953279-1', 'auto');
+			  ga('send', 'pageview');
+
+			</script>		
+		</div>
+	</footer>
 </body>
 </html>
