--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,7 @@
 <head>
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 <title>{{ page.title }}</title>
+<link rel="stylesheet" href="/style/default.css">	
 </head>
 <body>
 	<header><a href="http://gafish.github.com/"><< back home</a></header> 
