--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -19,7 +19,8 @@
 			  ga('create', 'UA-102953279-1', 'auto');
 			  ga('send', 'pageview');
 
-			</script>		
+			</script>	
+			<script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1263027490'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s22.cnzz.com/z_stat.php%3Fid%3D1263027490%26online%3D1%26show%3Dline' type='text/javascript'%3E%3C/script%3E"));</script>			
 		</div>
 	</footer>
 </body>
